--- a/Engine/ColorVision.Engine/Services/Devices/Calibration/InfoCalibration.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Calibration/InfoCalibration.xaml
@@ -83,7 +83,7 @@
                 <TabControl  TabStripPlacement="Top" Background="Transparent" BorderThickness="0,2,0,0"  BorderBrush="{DynamicResource BorderBrush}" >
                     <TabItem Header="{x:Static properties:Resources.Manager}">
                         <ScrollViewer Margin="-2,0"  HorizontalScrollBarVisibility="Disabled">
-                            <UniformGrid x:Name="CommandGrid" Margin="5" SizeChanged="UniformGrid_SizeChanged" VerticalAlignment="Top" />
+                            <UniformGrid x:Name="CommandGrid" Margin="5"  VerticalAlignment="Top" />
                         </ScrollViewer>
                     </TabItem>
                     <TabItem Header="{x:Static properties:Resources.BasicInformation}">
