--- a/Engine/ColorVision.Engine/Services/Devices/Camera/InfoCamera.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Camera/InfoCamera.xaml
@@ -90,7 +90,7 @@
                 <TabControl  TabStripPlacement="Top" Background="Transparent" BorderThickness="0,2,0,0"  BorderBrush="{DynamicResource BorderBrush}" >
                     <TabItem Header="{x:Static properties:Resources.Manager}">
                         <ScrollViewer Margin="-1,0"  HorizontalScrollBarVisibility="Disabled">
-                            <UniformGrid x:Name="CommandGrid" Margin="5" SizeChanged="UniformGrid_SizeChanged" VerticalAlignment="Top" >
+                            <UniformGrid x:Name="CommandGrid" Margin="5" VerticalAlignment="Top" >
                             </UniformGrid>
                         </ScrollViewer>
                     </TabItem>
