--- a/Engine/ColorVision.Engine/Services/Devices/SMU/InfoSMU.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/SMU/InfoSMU.xaml
@@ -84,7 +84,7 @@
                 <TabControl  TabStripPlacement="Top" BorderThickness="0,2,0,0"  BorderBrush="{DynamicResource BorderBrush}" >
                     <TabItem Header="{x:Static properties:Resources.Manager}">
                         <ScrollViewer Margin="5"  HorizontalScrollBarVisibility="Disabled">
-                            <UniformGrid x:Name="CommandGrid" Margin="5" Columns="3" SizeChanged="UniformGrid_SizeChanged" VerticalAlignment="Top"/>
+                            <UniformGrid x:Name="CommandGrid" Margin="5" Columns="3" VerticalAlignment="Top"/>
                         </ScrollViewer>
                     </TabItem>
                     <TabItem Header="基本信息">
