--- a/Engine/ColorVision.Engine/Services/Devices/Spectrum/DisplaySpectrum.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Spectrum/DisplaySpectrum.xaml
@@ -87,6 +87,26 @@
                                 <Button x:Name="btn_autoTest" Content="自动测试"  Margin="2" Click="Button_Click_AutoTest"/>
                                 <Button x:Name="btn_oneInitDark" Content="单次校零"  Margin="2" Click="Button_Click_Init_Dark"/>
                             </UniformGrid>
+                            <DockPanel>
+                                <Button Content="自适应校零"  Margin="2" Command="{Binding SelfAdaptionInitDarkCommand}"/>
+                                <Button Grid.Column="1" Margin="5,0,5,0" HorizontalAlignment="Left" Command="{Binding SelfAdaptionInitDarkSettingCommand}" Padding="2" Height="21" Width="21" >
+                                    <Button.Triggers>
+                                        <EventTrigger RoutedEvent="Button.Click">
+                                            <BeginStoryboard>
+                                                <Storyboard>
+                                                    <DoubleAnimation Storyboard.TargetName="rotateTransform21" Storyboard.TargetProperty="Angle" From="0" To="360" Duration="0:0:0.5" FillBehavior="Stop"/>
+                                                </Storyboard>
+                                            </BeginStoryboard>
+                                        </EventTrigger>
+                                    </Button.Triggers>
+                                    <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" RenderTransformOrigin="0.5,0.5" FontSize="14" Foreground="{DynamicResource GlobalTextBrush}">
+                                        <TextBlock.RenderTransform>
+                                            <RotateTransform x:Name="rotateTransform21"/>
+                                        </TextBlock.RenderTransform>
+                                    </TextBlock>
+                                </Button>
+
+                            </DockPanel>
                         </StackPanel>
                         <GroupBox Header="Shutter" Margin="0,0,0,5" Visibility="{Binding Config.IsShutterEnable,Converter={StaticResource bool2VisibilityConverter}}">
                             <StackPanel Margin="5">
