--- a/Engine/ColorVision.Engine/Services/Devices/Motor/DisplayMotor.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Motor/DisplayMotor.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ColorVision.Engine.Services.Devices.Motor.DisplayMotorControl"
+﻿<UserControl x:Class="ColorVision.Engine.Services.Devices.Motor.DisplayMotor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
