--- a/Engine/ColorVision.Engine/Templates/POI/EditPoiParam1.xaml
+++ b/Engine/ColorVision.Engine/Templates/POI/EditPoiParam1.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ColorVision.Engine.Templates.POI.EditPoiParam"
+﻿<Window x:Class="ColorVision.Engine.Templates.POI.EditPoiParam1"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -250,7 +250,6 @@
                                         <TextBlock Text="半径:" MinWidth="50"/>
                                         <TextBox  x:Name="TextBoxAreaCircleR" Width="55" Text="{Binding PoiConfig.AreaCircleRadius}"  BorderThickness="0,0,0,1"  PreviewTextInput="TextBox_PreviewTextInput"/>
                                     </DockPanel>
-                                    <Button Content="设置布点区域" Margin="3" Height="25" FontWeight="Bold" HorizontalAlignment="Left" Click="ShowPoiConfig_Click"/>
                                     <UniformGrid Columns="2">
                                         <DockPanel Margin="2" HorizontalAlignment="Left">
                                             <TextBlock Text="数量:" MinWidth="50"/>
@@ -262,6 +261,7 @@
                                         </DockPanel>
                                     </UniformGrid>
 
+                                    <Button Content="设置布点区域" Margin="3" Height="25" FontWeight="Bold" HorizontalAlignment="Left" Click="ShowPoiConfig_Click"/>
                                 </StackPanel>
                                 <StackPanel  Margin="5" Visibility="{Binding PoiConfig.IsAreaRect,Converter={StaticResource bool2VisibilityConverter}}">
                                     <DockPanel Margin="0,2" >
@@ -299,7 +299,6 @@
                                             <TextBox x:Name="tbHeight" Width="55"  Text="{Binding PoiConfig.AreaRectHeight}" />
                                         </DockPanel>
                                     </UniformGrid>
-                                    <Button Content="设置布点区域" Margin="3" Height="25" FontWeight="Bold" HorizontalAlignment="Left" Click="ShowPoiConfig_Click"/>
                                     <UniformGrid  Columns="2" >
                                         <DockPanel Margin="2" HorizontalAlignment="Left">
                                             <TextBlock Text="行数:"  MinWidth="50"/>
@@ -312,6 +311,7 @@
                                     </UniformGrid>
 
                                     <Grid>
+                                        <Button Content="设置布点区域" Margin="3" Height="25" FontWeight="Bold" HorizontalAlignment="Left" Click="ShowPoiConfig_Click"/>
 
                                         <StackPanel  HorizontalAlignment="Right">
                                             <Button x:Name="ButtonImportMarin1" Content="边距计算" Margin="3" Height="25" Click="ButtonImportMarin1_Click"/>
@@ -404,7 +404,7 @@
                                         </StackPanel>
 
                                     </Grid>
-                                    <Button Content="设置布点区域" Margin="3" Height="25" FontWeight="Bold" HorizontalAlignment="Left" Click="ShowPoiConfig_Click"/>
+
                                     <UniformGrid  Columns="2" >
                                         <DockPanel Margin="2" HorizontalAlignment="Left">
                                             <TextBlock Text="行数:"   MinWidth="50"/>
@@ -415,6 +415,7 @@
                                             <TextBox  Text="{Binding PoiConfig.AreaPolygonCol}" Width="55" />
                                         </DockPanel>
                                     </UniformGrid>
+                                    <Button Content="设置布点区域" Margin="3" Height="25" FontWeight="Bold" HorizontalAlignment="Left" Click="ShowPoiConfig_Click"/>
                                 </StackPanel>
                                 <StackPanel  Margin="5" Visibility="{Binding PoiConfig.IsAreaPolygon,Converter={StaticResource bool2VisibilityConverter}}">
                                     <ListView  x:Name="ListViewPolygon"  MaxHeight="200" Style="{StaticResource ListView.Small}" ItemsSource="{Binding PoiConfig.Polygons}" Grid.Column="1" ScrollViewer.HorizontalScrollBarVisibility="Disabled" PreviewKeyDown="ListView1_PreviewKeyDown" ManipulationBoundaryFeedback="SCManipulationBoundaryFeedback" >
