--- a/Engine/ColorVision.Engine/Templates/POI/EditPoiParam1.xaml
+++ b/Engine/ColorVision.Engine/Templates/POI/EditPoiParam1.xaml
@@ -99,23 +99,6 @@
                         <Button DockPanel.Dock="Right" Margin="2,0"   Content="{x:Static properties:Resources.Refresh}" Click="Button_RefreshImg_Click"/>
                         <ComboBox x:Name="ComboBoxImg"  Margin="2,0"  Style="{StaticResource ComboBox.Small}"/>
                     </DockPanel>
-                    <DockPanel Margin="0,2">
-                        <TextBlock Text="保存到文件"/>
-                        <ToggleButton  HorizontalAlignment="Left"  Margin="0,0,2,0" Style="{StaticResource ToggleButtonSwitch.Small}" IsChecked="{Binding PoiConfig.IsPoiCIEFile}"/>
-                    </DockPanel>
-                    <DockPanel Visibility="{Binding  PoiConfig.IsPoiCIEFile,Converter={StaticResource bool2VisibilityConverter}}">
-                        <Grid Width="20" Margin="5,0" DockPanel.Dock="Right" >
-                            <Button  Width="20" BorderBrush="Transparent" Background="Transparent" BorderThickness="0" Command="{Binding PoiConfig.OpenPoiCIEFileCommand}"/>
-                            <TextBlock Text="&#xED25;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" FontSize="15" Foreground="{DynamicResource GlobalTextBrush}"/>
-                        </Grid>
-                        <Button x:Name="button6" DockPanel.Dock="Right"  Content="保存" Click="SaveFile_Click" Margin="2,0" />
-                        <Button DockPanel.Dock="Right"  Content="..." Command="{Binding PoiConfig.SetPoiFileCommand}" Margin="2,0" />
-                        <TextBox Margin="2,0" BorderThickness="1" Text="{Binding PoiConfig.PoiCIEFileName}"/>
-                    </DockPanel>
-                    <StackPanel Margin="2"  Orientation="Horizontal" Visibility="{Binding  PoiConfig.IsPoiCIEFile,Converter={StaticResource bool2VisibilityConverter}}">
-                        <TextBlock Text="半径:" Width="40"/>
-                        <TextBox Text="{Binding PoiConfig.Thickness}"  Width="55"  />
-                    </StackPanel>
                     <StackPanel  Margin="2" Orientation="Horizontal">
                         <Button  ToolTip="保存关注点" Click="Button_Save_Click" HorizontalAlignment="Right" Margin="0,0,5,0">
                             <Image Source="{StaticResource DrawingImageSave}" Height="20" />
@@ -142,18 +125,6 @@
                 </StackPanel>
             </Border>
 
-
-            <Border Grid.Row="2"  Style="{StaticResource BorderModuleArea}"  CornerRadius="5" Margin="5,5,5,0">
-                <StackPanel Margin="2">
-                    <StackPanel x:Name="PoiFixStackPanel" >
-                        <StackPanel Orientation="Horizontal" Margin="0,2" >
-                            <TextBlock DockPanel.Dock="Left" Margin="2,0" Text="数据修正文件路径" Width="120"/>
-                            <TextBox Text="{Binding PoiConfig.PoiFixFilePath}" Margin="2,0"  Width="90"/>
-                            <Button DockPanel.Dock="Right" Margin="2,0" Content="设置" Click="PoiFix_Create_Click"/>
-                        </StackPanel>
-                    </StackPanel>
-                </StackPanel>
-            </Border>
 
             <ScrollViewer x:Name="ScrollViewer1" Grid.Row="4" Margin="5,5,5,0" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
                 <StackPanel x:Name="FunctionStackpanel" Margin="0" Grid.Row="0">
@@ -474,8 +445,8 @@
                             </StackPanel>
 
                             <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                                <RadioButton x:Name="RadioButtonCircle" Width="60"  GroupName="shape" IsChecked="{Binding IsPointCircle}" Content="圆形"/>
-                                <RadioButton x:Name="RadioButtonRect" Width="60"  GroupName="shape" IsChecked="{Binding IsPointRect}" Content="矩形"/>
+                                <RadioButton x:Name="RadioButtonCircle" Width="60"  GroupName="shape" IsChecked="{Binding PoiConfig.IsPointCircle}" Content="圆形"/>
+                                <RadioButton x:Name="RadioButtonRect" Width="60"  GroupName="shape" IsChecked="{Binding PoiConfig.IsPointRect}" Content="矩形"/>
                             </StackPanel>
 
                             <StackPanel Margin="5" Visibility="{Binding IsPointCircle,Converter={StaticResource bool2VisibilityConverter}}" >
