--- a/Engine/ColorVision.Engine/Templates/POI/EditPoiParam1.xaml
+++ b/Engine/ColorVision.Engine/Templates/POI/EditPoiParam1.xaml
@@ -12,9 +12,10 @@
         xmlns:properties="clr-namespace:ColorVision.Engine.Properties"
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml" 
         xmlns:hc="https://handyorg.github.io/handycontrol"
+        xmlns:kb ="ColorVision.Engine.Templates.Jsons.KB"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance local:PoiParam}"
-        Title="关注点编辑"  Height="1080" Width="1920" WindowState="Maximized" Initialized="Window_Initialized">
+        d:DataContext="{d:DesignInstance kb:KBJson}"
+        Title="键盘模板编辑"  Height="1080" Width="1920" WindowState="Maximized" Initialized="Window_Initialized">
     <Window.Resources>
         <local:RoundToNearestHalfConverter x:Key="RoundToNearestHalfConverter"/>
 
@@ -39,14 +40,7 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="300"/>
         </Grid.ColumnDefinitions>
-        <Grid Grid.Column="1"  Background="{DynamicResource GlobalBackground}">
-            <Grid.RowDefinitions>
-                <RowDefinition  Height="auto"/>
-                <RowDefinition  Height="auto"/>
-                <RowDefinition  Height="auto"/>
-                <RowDefinition  Height="auto"/>
-                <RowDefinition  Height="*"/>
-            </Grid.RowDefinitions>
+        <StackPanel Grid.Column="1"  Background="{DynamicResource GlobalBackground}">
             <Border Margin="5,5,5,0" Style="{StaticResource BorderModuleArea}"  CornerRadius="5">
                 <StackPanel Margin="3">
                     <DockPanel Margin="0,3">
@@ -108,7 +102,37 @@
             </Border>
             <Border Grid.Row="1"  Style="{StaticResource BorderModuleArea}"  CornerRadius="5" Margin="5,5,5,0">
                 <StackPanel Margin="5">
-                    <CheckBox Content="锁定" IsChecked="{Binding PoiConfig.LockDeafult}"/>
+                    <DockPanel Margin="0,0,0,2">
+                        <Button DockPanel.Dock="Right"  Content="..." Command="{Binding SelectLuminFileCommand}" Margin="2,0" />
+                        <TextBlock Text="luminFile" Width="60"/>
+                        <TextBox  BorderThickness="1" Style="{StaticResource TextBox.Small}" Text="{Binding LuminFile}"/>
+                    </DockPanel>
+                    <DockPanel Margin="0,2">
+                        <Button DockPanel.Dock="Right"  Content="..." Command="{Binding SelcetSaveFilePathCommand}" Margin="2,0" />
+                        <TextBlock Text="SavePath" Width="60"/>
+                        <TextBox  BorderThickness="1" Style="{StaticResource TextBox.Small}" Text="{Binding SaveFolderPath}"/>
+                    </DockPanel>
+                    <UniformGrid Columns="2" Margin="0,2">
+                        <CheckBox x:Name="CB_CalculateHalo" Content="CM_CalculateHalo" IsChecked="False" />
+                        <CheckBox x:Name="CB_CalculateKey" Content="CM_CalculateKey" IsChecked="True" />
+                    </UniformGrid>
+                    <StackPanel Orientation="Horizontal" Margin="0,2">
+                        <TextBlock Text="SaveProcessData" Width="100"/>
+                        <TextBox  BorderThickness="1" Width="100" Style="{StaticResource TextBox.Small}" Text="{Binding SaveProcessData}"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="0,2">
+                        <TextBlock Text="Exp" Width="100"/>
+                        <TextBox  BorderThickness="1" Width="100" Style="{StaticResource TextBox.Small}" Text="{Binding Exp}"/>
+                    </StackPanel>
+                    <Button Content="计算"  Margin="0,2,0,2" Click="Cal_Click"/>
+                    <Button Content="设置"  Margin="0,2,0,0" Click="SetKBLocal_Click"/>
+
+                </StackPanel>
+            </Border>
+            
+            <Border Grid.Row="1"  Style="{StaticResource BorderModuleArea}"  CornerRadius="5" Margin="5,5,5,0">
+                <StackPanel Margin="5">
+                    <CheckBox Content="{x:Static properties:Resources.Lock}" IsChecked="{Binding PoiConfig.LockDeafult}"/>
                     <StackPanel Margin="2"  Orientation="Horizontal" >
                         <TextBlock Text="默认半径:" Width="55"/>
                         <TextBox Text="{Binding PoiConfig.DefalutRadius}"  Width="55"  />
@@ -404,7 +428,7 @@
                     </Border>
                 </StackPanel>
             </ScrollViewer>
-        </Grid>
+        </StackPanel>
 
         <Grid x:Name="ImageContentGrid" Grid.Column="0"  Background="{StaticResource  TransparentGridBrush}">
             <Grid.RowDefinitions>
